# zakupki_gov_ru_manager

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
managers/: fz223.py  fz44.py  test_zakupki.py  zakupki_gov_ru_manager.py
