[metadata]
name = zakupki_gov_ru_manager
version = 0.1
description = zakupki.gov.ru manager
long_description = file: README.rst
url = https://masterme.ru
author = Denis Yaroslavtsev
author_email = admin@masterme.ru
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.31.0
    simple_logger>=0.1

[options.packages.find]
exclude =
    *__pycache__*
